<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_gray"
    android:orientation="vertical"
    tools:context=".SettingsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@color/gray"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/menu_icon"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginTop="10dp"
            android:layout_weight="0.1"
            android:contentDescription="@string/Menu_Icon"
            android:src="@drawable/menu_ic" />

        <TextView
            android:id="@+id/search_Bar_Home_Customer"
            style="@style/Widget.Material3.AutoCompleteTextView.OutlinedBox.Dense"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:layout_weight="0.8"
            android:backgroundTint="@color/light_gray"
            android:fontFamily="@font/bebas_neue_regular"
            android:hint="@string/Settings"
            android:paddingTop="4dp"
            android:paddingBottom="0dp"
            android:textColorHint="@color/black"
            android:textSize="40sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="350dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        android:padding="16dp">

        <Button
            android:id="@+id/login_settings"
            style="@style/Widget.Material3.AutoCompleteTextView.OutlinedBox.Dense"
            android:layout_width="320dp"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/gray_border_10dp"
            android:hint="@string/login"
            android:paddingTop="9dp"
            android:textAlignment="center"
            android:textColorHint="@color/black"
            app:backgroundTint="@null" />

        <Button
            android:id="@+id/about_us"
            style="@style/Widget.Material3.AutoCompleteTextView.OutlinedBox.Dense"
            android:layout_width="320dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/gray_border_10dp"

            android:hint="@string/about_us"
            android:paddingTop="9dp"
            android:textAlignment="center"
            android:textColorHint="@color/black"
            app:backgroundTint="@null" />

        <Button
            android:id="@+id/Faq"
            style="@style/Widget.Material3.AutoCompleteTextView.OutlinedBox.Dense"
            android:layout_width="320dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/gray_border_10dp"
            android:hint="@string/Faq"
            android:paddingTop="9dp"
            android:textAlignment="center"
            android:textColorHint="@color/black"
            app:backgroundTint="@null" />

    </LinearLayout>

</LinearLayout>