<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="light_gray"
    tools:context=".HomeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:background="@color/gray"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/menu_icon"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginTop="10dp"
                android:layout_weight="0.1"
                android:contentDescription="@string/Menu_Icon"
                android:src="@drawable/menu_ic" />

            <EditText
                android:id="@+id/search_Bar_Home_Customer"
                style="@style/Widget.Material3.AutoCompleteTextView.OutlinedBox.Dense"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:layout_weight="0.8"
                android:background="@drawable/edit_text_border"
                android:backgroundTint="@color/light_gray"
                android:hint="@string/Search" />

            <ImageView
                android:id="@+id/search_icon"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginTop="10dp"
                android:layout_weight="0.1"
                android:contentDescription="@string/Search_Icon"
                android:src="@drawable/search" />

        </LinearLayout>

        <TextView
            android:id="@+id/Gym_Goals_Title_Home_Customer"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:text="@string/GymGoals"
            android:textSize="30sp" />


        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/fragment_StreakDays_Container_View_Home_Customer"
            android:name="com.example.gym.StreakDaysFragment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:text="@string/Rutine"
            android:textSize="30sp" />

        <LinearLayout
            android:layout_width="330dp"
            android:layout_height="match_parent"
            android:layout_marginStart="43dp"
            android:background="@color/light_gray" />

    </LinearLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigation_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/light_gray"
        app:headerLayout="@null"
        app:itemIconPadding="30dp"
        app:menu="@menu/burguer_menu" />


</androidx.drawerlayout.widget.DrawerLayout>