<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_gray"
    android:orientation="vertical"
    tools:context=".LoginFragment">


    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/logo_login"
        android:layout_width="222dp"
        android:layout_height="222dp"
        android:layout_marginTop="56dp"
        android:contentDescription="@string/Logo"
        android:src="@drawable/logo_gym_goals"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/email_EditText_Login"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="312dp"
        android:layout_height="53dp"
        android:layout_marginTop="76dp"
        android:autofillHints="emailAddress"
        android:background="@drawable/gray_border_10dp"
        android:hint="@string/Email"
        android:inputType="textEmailAddress"
        android:padding="9dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:paddingBottom="10dp"
        android:textAlignment="textStart"
        android:textColor="@color/Charcoal"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logo_login" />

    <EditText
        android:id="@+id/password_EditText_login"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="312dp"
        android:layout_height="53dp"
        android:layout_marginTop="26dp"
        android:autofillHints="password"
        android:background="@drawable/gray_border_10dp"
        android:hint="@string/Password"
        android:inputType="textPassword"
        android:padding="9dp"
        android:paddingStart="20dp"
        android:paddingEnd="30dp"
        android:paddingBottom="10dp"
        android:textAlignment="textStart"
        android:textColor="@color/Charcoal"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/email_EditText_Login" />


    <Button
        android:id="@+id/confirm_Button_Loggin"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="160dp"
        android:background="@drawable/btn_orange_border"
        android:text="@string/Confirm"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/email_EditText_Login" />

    <TextView
        android:id="@+id/register_Link_Login"
        android:layout_width="350dp"
        android:layout_height="45dp"
        android:layout_marginTop="30dp"
        android:clickable="true"
        android:focusable="true"
        android:paddingTop="10dp"
        android:text="@string/QuestionRegister"
        android:textAlignment="center"
        android:textColor="@color/Blue"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/confirm_Button_Loggin" />

</androidx.constraintlayout.widget.ConstraintLayout>