<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/light_gray"
    tools:context=".fragments.RegisterFragment">

    <ImageButton
        android:id="@+id/back_icon"
        android:layout_width="45dp"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_weight="0.1"
        android:contentDescription="@string/Menu_Icon"
        android:src="@drawable/arrow_back_icon"
        app:tint="@color/gray"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/logo_Register"
        android:layout_width="222dp"
        android:layout_height="222dp"
        android:layout_marginTop="30dp"
        android:contentDescription="@string/Logo"
        android:src="@drawable/logo_gym_goals"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <Spinner
        android:id="@+id/spinner_Experience"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:spinnerMode="dropdown"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logo_Register"
        tools:listitem="@layout/spinner_item"/>

    <EditText
        android:id="@+id/name_EditText_Register"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="312dp"
        android:layout_height="53dp"
        android:textColor="@color/Charcoal"
        android:layout_marginTop="21dp"
        android:autofillHints="emailAddress"
        android:background="@drawable/gray_border_10dp"
        android:hint="@string/Name"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:textAlignment="textStart"
        android:textSize="24sp"
        android:textColorHint="@color/Charcoal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/spinner_Experience" />

    <EditText
        android:id="@+id/email_EditText_Login"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="312dp"
        android:layout_height="53dp"
        android:textColor="@color/Charcoal"
        android:textColorHint="@color/Charcoal"
        android:layout_marginTop="21dp"
        android:autofillHints="emailAddress"
        android:background="@drawable/gray_border_10dp"
        android:hint="@string/Email"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:textAlignment="textStart"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/name_EditText_Register" />

    <EditText
        android:id="@+id/password_EditText_Register"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="312dp"
        android:layout_height="53dp"
        android:layout_marginTop="26dp"
        android:textColorHint="@color/Charcoal"
        android:autofillHints="password"
        android:background="@drawable/gray_border_10dp"
        android:hint="@string/Password"
        android:inputType="textPassword"
        android:textColor="@color/Charcoal"
        android:padding="10dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:textAlignment="textStart"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/email_EditText_Login" />



    <Button
        android:id="@+id/confirm_Button_Register"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="23dp"
        android:background="@drawable/btn_orange_border"
        android:text="@string/Confirm"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password_EditText_Register"/>




</androidx.constraintlayout.widget.ConstraintLayout>