<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_gray"
    tools:context=".RoutineFragment">

    <LinearLayout
        android:id="@+id/bar_routine"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@color/gray"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/back_icon"
            android:layout_width="45dp"
            android:layout_height="50dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_weight="0.1"
            app:tint="@color/light_gray"
            android:contentDescription="@string/Menu_Icon"
            android:src="@drawable/arrow_back_icon"
            android:background="@color/gray"/>

        <TextView
            android:id="@+id/text_view_routine_title"
            style="@style/Widget.Material3.AutoCompleteTextView.OutlinedBox.Dense"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:layout_weight="0.7"
            android:fontFamily="@font/bebas_neue_regular"
            android:text="@string/Rutine"
            android:textColor="@color/light_gray"
            android:textSize="40sp" />

        <TextView
            android:id="@+id/text_view_place_routine"
            style="@style/Widget.Material3.AutoCompleteTextView.OutlinedBox.Dense"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:layout_weight="0.1"
            android:fontFamily="@font/bebas_neue_regular"
            android:text="@string/Gym"
            android:textColor="@color/light_gray"
            android:textSize="40sp" />

    </LinearLayout>


    <ScrollView
        android:id="@+id/Scroll_View_Routine"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bar_routine">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view_routine_exercise"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/bar_routine"
            tools:listitem="@layout/item_excercise" />

    </ScrollView>

    <Button
        android:id="@+id/button_change_place_routine"
        android:layout_width="140dp"
        android:layout_height="50dp"
        android:layout_marginBottom="25dp"
        android:layout_marginStart="20dp"
        android:background="@drawable/btn_orange_border"
        android:text="@string/House"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <Button
        android:id="@+id/button_init_rutine"
        android:layout_width="140dp"
        android:layout_height="50dp"
        android:layout_marginBottom="25dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/btn_orange_border"
        android:text="@string/Init_Routine"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/button_change_place_routine" />

</androidx.constraintlayout.widget.ConstraintLayout>