<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".register"
    android:orientation="vertical">

    <ImageView
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="30dp"
        />
    <EditText
        style="@style/Widget.AppCompat.Button"
        android:layout_width="350dp"
        android:layout_height="45dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="20dp"
        android:background="@color/SearchBar"
        android:hint="@string/Email"
        android:textSize="20sp"
        android:padding="9dp"
        android:paddingBottom="10dp"
        android:paddingStart="20dp"
        android:textAlignment="textStart"
        />
    <EditText
        style="@style/Widget.AppCompat.Button"
        android:layout_width="350dp"
        android:layout_height="45dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="20dp"
        android:background="@color/SearchBar"
        android:hint="@string/Password"
        android:textSize="20sp"
        android:padding="9dp"
        android:paddingBottom="10dp"
        android:paddingStart="20dp"
        android:textAlignment="textStart"
        />

    <Spinner
        android:layout_width="350dp"
        android:layout_height="45dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="35dp"
        android:background="@color/SearchBar"
        />


    <Button
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:text="@string/Confirm"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/Orange"

        />

</LinearLayout>